--- a/Notebooks/a01_data_loader.ipynb
+++ b/Notebooks/a01_data_loader.ipynb
@@ -2,14 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "404619bf",
+   "execution_count": 1,
+   "id": "a739b273",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from typing import List, Tuple\n",
+    "from collections import defaultdict\n",
+    "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef7289f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
