summerizing the missing values

--- a/Notebooks/a01_data_warmup.ipynb
+++ b/Notebooks/a01_data_warmup.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df24a4e8",
+   "id": "4dbe328d",
    "metadata": {},
    "source": [
     "# Load data for native Ru"
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0c38dbc4",
+   "id": "4b6372fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a11e4a8",
+   "id": "c2192422",
    "metadata": {},
    "source": [
     "# Check ups"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c4652696",
+   "id": "f75e56cf",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e7b7e835",
+   "id": "e5f70273",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "beea92c6",
+   "id": "02195aaa",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cc2f2ae2",
+   "id": "f71e9e1b",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "60c890f1",
+   "id": "3010c96d",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f9259acc",
+   "id": "6f16b0f9",
    "metadata": {},
    "outputs": [
     {
@@ -1160,8 +1160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "a6cd4d82",
+   "execution_count": 70,
+   "id": "947871ab",
    "metadata": {},
    "outputs": [
     {
@@ -1183,14 +1183,13 @@
     "    f\" missing in fixation vs demo   :  {ru_data_subject_id.difference(demo_ru_subject_id)} \\n\",\n",
     "    f\"missing in demo vs fixation   :  {demo_ru_subject_id.difference(ru_data_subject_id)} \\n\",\n",
     "\n",
-    "\n",
     ")\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7515edf7",
+   "id": "dd79885a",
    "metadata": {},
    "source": [
     "## midterm conclusion:\n",
@@ -1201,11 +1200,329 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "b8086705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SubjectID</th>\n",
+       "      <th>Text_ID</th>\n",
+       "      <th>Fix_X</th>\n",
+       "      <th>Fix_Y</th>\n",
+       "      <th>Fix_Duration</th>\n",
+       "      <th>Word_Number</th>\n",
+       "      <th>Word</th>\n",
+       "      <th>Sentence</th>\n",
+       "      <th>Language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236684</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236685</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236686</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236687</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236688</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>236689 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SubjectID  Text_ID  Fix_X  Fix_Y  Fix_Duration  Word_Number   Word  \\\n",
+       "0           False    False  False  False         False        False  False   \n",
+       "1           False    False  False  False         False        False  False   \n",
+       "2           False    False  False  False         False        False  False   \n",
+       "3           False    False  False  False         False        False  False   \n",
+       "4           False    False  False  False         False        False  False   \n",
+       "...           ...      ...    ...    ...           ...          ...    ...   \n",
+       "236684      False    False  False  False         False        False  False   \n",
+       "236685      False    False  False  False         False        False  False   \n",
+       "236686      False    False  False  False         False        False  False   \n",
+       "236687      False    False  False  False         False        False  False   \n",
+       "236688      False    False  False  False         False        False  False   \n",
+       "\n",
+       "        Sentence  Language  \n",
+       "0          False     False  \n",
+       "1          False     False  \n",
+       "2          False     False  \n",
+       "3          False     False  \n",
+       "4          False     False  \n",
+       "...          ...       ...  \n",
+       "236684     False     False  \n",
+       "236685     False     False  \n",
+       "236686     False     False  \n",
+       "236687     False     False  \n",
+       "236688     False     False  \n",
+       "\n",
+       "[236689 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "ru_data.isnull()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "eeeaa81c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SubjectID          0\n",
+       "Text_ID            0\n",
+       "Fix_X              0\n",
+       "Fix_Y              0\n",
+       "Fix_Duration       0\n",
+       "Word_Number       26\n",
+       "Word              26\n",
+       "Sentence        2811\n",
+       "Language           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "ru_data.isnull().sum()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "f1f1e2e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subid                  0\n",
+       "uniform_id             0\n",
+       "lang                   0\n",
+       "L2_spelling_skill      3\n",
+       "L2_vocabulary_size     7\n",
+       "vocab.t2.5             7\n",
+       "L2_lexical_skill      11\n",
+       "TOWRE_word             1\n",
+       "TOWRE_nonword          1\n",
+       "motiv                  9\n",
+       "IQ                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "demo_ru.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "14a91b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "uniform_id    0\n",
+       "Age           0\n",
+       "Sex           3\n",
+       "lang          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "age_gender_ru.isnull().sum()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "01627558",
+   "id": "4675020d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
