--- a/Notebooks/a01_data_load_clean_rescale_concat.ipynb
+++ b/Notebooks/a01_data_load_clean_rescale_concat.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "784cfe26",
    "metadata": {},
    "outputs": [],
@@ -2111,10 +2111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1015a9ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SubjectID', 'lang', 'L2_spelling_skill', 'L2_vocabulary_size',\n",
+       "       'vocab.t2.5', 'L2_lexical_skill', 'TOWRE_word', 'TOWRE_nonword',\n",
+       "       'motiv', 'IQ', 'Target', 'Age', 'Sex'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -2124,10 +2138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "74af2aae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SubjectID', 'Text_ID', 'Fix_X', 'Fix_Y', 'Fix_Duration', 'Word_Number',\n",
+       "       'Word', 'Sentence', 'Language'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "ru_fix_data.columns\n",
@@ -2136,10 +2163,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "cc43d96c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text_ID</th>\n",
+       "      <th>Fix_X</th>\n",
+       "      <th>Fix_Y</th>\n",
+       "      <th>Fix_Duration</th>\n",
+       "      <th>Word_Number</th>\n",
+       "      <th>Word</th>\n",
+       "      <th>Sentence</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>SubjectID</th>\n",
+       "      <th>L2_spelling_skill</th>\n",
+       "      <th>L2_vocabulary_size</th>\n",
+       "      <th>vocab.t2.5</th>\n",
+       "      <th>L2_lexical_skill</th>\n",
+       "      <th>TOWRE_word</th>\n",
+       "      <th>TOWRE_nonword</th>\n",
+       "      <th>motiv</th>\n",
+       "      <th>IQ</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Samuel Morse, best k</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>rum_1</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>3.798077</td>\n",
+       "      <td>4.523810</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.144367</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Samuel Morse, best k</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>rum_1</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>3.798077</td>\n",
+       "      <td>4.523810</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.144367</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Morse,</td>\n",
+       "      <td>Samuel Morse, best k</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>rum_1</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>3.798077</td>\n",
+       "      <td>4.523810</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.144367</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>best</td>\n",
+       "      <td>Samuel Morse, best k</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>rum_1</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>3.798077</td>\n",
+       "      <td>4.523810</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.144367</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>416.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>known</td>\n",
+       "      <td>Samuel Morse, best k</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>rum_1</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>3.798077</td>\n",
+       "      <td>4.523810</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.144367</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1903</th>\n",
+       "      <td>12</td>\n",
+       "      <td>388.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>connectivity</td>\n",
+       "      <td>This fusion of capab</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ru_55</td>\n",
+       "      <td>4.318182</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.759615</td>\n",
+       "      <td>4.603175</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.605162</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1904</th>\n",
+       "      <td>12</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>connectivity</td>\n",
+       "      <td>This fusion of capab</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ru_55</td>\n",
+       "      <td>4.318182</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.759615</td>\n",
+       "      <td>4.603175</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.605162</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1905</th>\n",
+       "      <td>12</td>\n",
+       "      <td>589.0</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>in</td>\n",
+       "      <td>This fusion of capab</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ru_55</td>\n",
+       "      <td>4.318182</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.759615</td>\n",
+       "      <td>4.603175</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.605162</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1906</th>\n",
+       "      <td>12</td>\n",
+       "      <td>643.0</td>\n",
+       "      <td>588.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>147</td>\n",
+       "      <td>personal</td>\n",
+       "      <td>This fusion of capab</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ru_55</td>\n",
+       "      <td>4.318182</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.759615</td>\n",
+       "      <td>4.603175</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.605162</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1907</th>\n",
+       "      <td>12</td>\n",
+       "      <td>757.0</td>\n",
+       "      <td>591.0</td>\n",
+       "      <td>257.0</td>\n",
+       "      <td>148</td>\n",
+       "      <td>lives.</td>\n",
+       "      <td>This fusion of capab</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ru_55</td>\n",
+       "      <td>4.318182</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.759615</td>\n",
+       "      <td>4.603175</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.605162</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>184791 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Text_ID  Fix_X  Fix_Y  Fix_Duration  Word_Number          Word  \\\n",
+       "0           1   79.0  104.0         221.0            1        Samuel   \n",
+       "1           1  118.0  101.0         289.0            1        Samuel   \n",
+       "2           1  247.0   92.0         337.0            2        Morse,   \n",
+       "3           1  336.0  118.0         281.0            3          best   \n",
+       "4           1  416.0  125.0         250.0            4         known   \n",
+       "...       ...    ...    ...           ...          ...           ...   \n",
+       "1903       12  388.0  585.0         151.0          145  connectivity   \n",
+       "1904       12  480.0  585.0         170.0          145  connectivity   \n",
+       "1905       12  589.0  584.0         196.0          146            in   \n",
+       "1906       12  643.0  588.0         147.0          147      personal   \n",
+       "1907       12  757.0  591.0         257.0          148        lives.   \n",
+       "\n",
+       "                  Sentence Language SubjectID  L2_spelling_skill  \\\n",
+       "0     Samuel Morse, best k       ru     rum_1           4.431818   \n",
+       "1     Samuel Morse, best k       ru     rum_1           4.431818   \n",
+       "2     Samuel Morse, best k       ru     rum_1           4.431818   \n",
+       "3     Samuel Morse, best k       ru     rum_1           4.431818   \n",
+       "4     Samuel Morse, best k       ru     rum_1           4.431818   \n",
+       "...                    ...      ...       ...                ...   \n",
+       "1903  This fusion of capab       ru     ru_55           4.318182   \n",
+       "1904  This fusion of capab       ru     ru_55           4.318182   \n",
+       "1905  This fusion of capab       ru     ru_55           4.318182   \n",
+       "1906  This fusion of capab       ru     ru_55           4.318182   \n",
+       "1907  This fusion of capab       ru     ru_55           4.318182   \n",
+       "\n",
+       "      L2_vocabulary_size  vocab.t2.5  L2_lexical_skill  TOWRE_word  \\\n",
+       "0                   3.55         4.5            4.0625    3.798077   \n",
+       "1                   3.55         4.5            4.0625    3.798077   \n",
+       "2                   3.55         4.5            4.0625    3.798077   \n",
+       "3                   3.55         4.5            4.0625    3.798077   \n",
+       "4                   3.55         4.5            4.0625    3.798077   \n",
+       "...                  ...         ...               ...         ...   \n",
+       "1903                1.20         3.0            3.7500    4.759615   \n",
+       "1904                1.20         3.0            3.7500    4.759615   \n",
+       "1905                1.20         3.0            3.7500    4.759615   \n",
+       "1906                1.20         3.0            3.7500    4.759615   \n",
+       "1907                1.20         3.0            3.7500    4.759615   \n",
+       "\n",
+       "      TOWRE_nonword  motiv   IQ    Target  Age  Sex  \n",
+       "0          4.523810    3.7  7.0  4.144367   30    0  \n",
+       "1          4.523810    3.7  7.0  4.144367   30    0  \n",
+       "2          4.523810    3.7  7.0  4.144367   30    0  \n",
+       "3          4.523810    3.7  7.0  4.144367   30    0  \n",
+       "4          4.523810    3.7  7.0  4.144367   30    0  \n",
+       "...             ...    ...  ...       ...  ...  ...  \n",
+       "1903       4.603175    3.4  8.0  3.605162   29    1  \n",
+       "1904       4.603175    3.4  8.0  3.605162   29    1  \n",
+       "1905       4.603175    3.4  8.0  3.605162   29    1  \n",
+       "1906       4.603175    3.4  8.0  3.605162   29    1  \n",
+       "1907       4.603175    3.4  8.0  3.605162   29    1  \n",
+       "\n",
+       "[184791 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -2149,10 +2539,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "149bb43d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Text_ID', 'Fix_X', 'Fix_Y', 'Fix_Duration', 'Word_Number', 'Word',\n",
+       "       'Sentence', 'Language', 'SubjectID', 'L2_spelling_skill',\n",
+       "       'L2_vocabulary_size', 'vocab.t2.5', 'L2_lexical_skill', 'TOWRE_word',\n",
+       "       'TOWRE_nonword', 'motiv', 'IQ', 'Target', 'Age', 'Sex'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "fix_demo.columns\n",
@@ -2161,14 +2566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "3398832d",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "fix_demo.to_csv(\"../Datasets/Fix_Demo_Ru.csv\")\n",
+    "fix_demo.to_csv(\"../Datasets/Fix_Demo_Ru.csv\", index=False)\n",
     "\n"
    ]
   },
@@ -2183,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15571ed4",
+   "id": "ac998f63",
    "metadata": {},
    "outputs": [],
    "source": []
