--- a/Notebooks/a01_data_load_clean_rescale_concat.ipynb
+++ b/Notebooks/a01_data_load_clean_rescale_concat.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "id": "72870f47",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "4      du_8   27  0.0   du"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "544c2673",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "id": "8f724cbc",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "id": "2f6b2771",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "4             73.75        82.0           28.0    3.9  6.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,6 @@
     "\n",
     "demo = pd.read_excel(\"../Datasets/MECO/demo_alllang.xlsx\").dropna()\n",
     "\n",
-    "\n",
     "print(demo.shape)\n",
     "demo.head()\n",
     "\n"
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "id": "0b84ccb1",
    "metadata": {},
    "outputs": [],
@@ -490,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "id": "b0f0f8a3",
    "metadata": {},
    "outputs": [],
@@ -522,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "id": "7d866187",
    "metadata": {},
    "outputs": [
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "id": "aa3399a5",
    "metadata": {},
    "outputs": [],
@@ -565,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "id": "8fe61e5f",
    "metadata": {},
    "outputs": [
@@ -793,7 +792,7 @@
        "[559 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "id": "874a8156",
    "metadata": {},
    "outputs": [
@@ -842,7 +841,7 @@
        "      <th>TOWRE_nonword</th>\n",
        "      <th>motiv</th>\n",
        "      <th>IQ</th>\n",
-       "      <th>Target</th>\n",
+       "      <th>Target_Ave</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1030,23 +1029,23 @@
        "604  rum_70    rum_70   ru           4.431818                2.00       4.375   \n",
        "605  rum_71    rum_71   ru           4.090909                2.05       4.375   \n",
        "\n",
-       "     L2_lexical_skill  TOWRE_word  TOWRE_nonword  motiv    IQ    Target  \n",
-       "0              3.7500    4.038462       4.444444    3.8   6.0  3.946772  \n",
-       "1              4.6875    3.028846       4.285714    4.0   4.0  4.063222  \n",
-       "2              4.7500    4.038462       4.285714    3.8   9.0  4.415772  \n",
-       "3              3.3125    3.125000       3.571429    3.5   9.0  3.459821  \n",
-       "4              3.6875    3.942308       2.222222    3.9   6.0  3.435566  \n",
-       "..                ...         ...            ...    ...   ...       ...  \n",
-       "601            4.6875    4.230769       4.126984    4.0  11.0  4.298451  \n",
-       "602            3.8325    3.894231       3.650794    3.8  11.0  3.947390  \n",
-       "603            3.4375    4.038462       4.047619    3.6   9.0  3.942188  \n",
-       "604            3.6875    3.557692       3.253968    3.5   8.0  3.550996  \n",
-       "605            3.6250    3.653846       4.047619    3.1   7.0  3.640396  \n",
+       "     L2_lexical_skill  TOWRE_word  TOWRE_nonword  motiv    IQ  Target_Ave  \n",
+       "0              3.7500    4.038462       4.444444    3.8   6.0    3.946772  \n",
+       "1              4.6875    3.028846       4.285714    4.0   4.0    4.063222  \n",
+       "2              4.7500    4.038462       4.285714    3.8   9.0    4.415772  \n",
+       "3              3.3125    3.125000       3.571429    3.5   9.0    3.459821  \n",
+       "4              3.6875    3.942308       2.222222    3.9   6.0    3.435566  \n",
+       "..                ...         ...            ...    ...   ...         ...  \n",
+       "601            4.6875    4.230769       4.126984    4.0  11.0    4.298451  \n",
+       "602            3.8325    3.894231       3.650794    3.8  11.0    3.947390  \n",
+       "603            3.4375    4.038462       4.047619    3.6   9.0    3.942188  \n",
+       "604            3.6875    3.557692       3.253968    3.5   8.0    3.550996  \n",
+       "605            3.6250    3.653846       4.047619    3.1   7.0    3.640396  \n",
        "\n",
        "[559 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,10 +1054,354 @@
     "\n",
     "# compute the average of each row's L2* as the target value\n",
     "cols = list(L2_scores.keys())\n",
-    "demo[\"Target\"] = demo[cols].sum(axis=1)/len(cols)\n",
+    "demo[\"Target_Ave\"] = demo[cols].sum(axis=1)/len(cols)\n",
+    "# demo[\"Target_Label\"] = int(demo[\"Target_Ave\"])\n",
     "demo\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "7eb41b06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "demo[\"Target_Label\"] = demo[\"Target_Ave\"].apply(np.ceil)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "78f6c87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 5., 5., 4., 4., 4., 3., 4., 4., 5., 5., 5., 5., 4., 4., 4., 4.,\n",
+       "       3., 4., 4., 4., 5., 5., 5., 4., 5., 4., 5., 5., 5., 3., 4., 4., 5.,\n",
+       "       4., 5., 4., 5., 4., 5., 5., 4., 4., 5., 4., 3., 4., 5., 5., 4., 5.,\n",
+       "       4., 5., 5., 5., 4., 5., 5., 5., 4., 5., 4., 4., 4., 4., 5., 4., 4.,\n",
+       "       5., 4., 4., 5., 5., 5., 4., 4., 4., 5., 5., 4., 5., 5., 4., 5., 5.,\n",
+       "       4., 4., 4., 4., 4., 3., 5., 4., 5., 5., 5., 5., 4., 4., 4., 5., 4.,\n",
+       "       4., 5., 4., 4., 4., 5., 5., 5., 4., 4., 4., 4., 4., 4., 5., 5., 4.,\n",
+       "       4., 4., 4., 5., 4., 4., 4., 5., 4., 4., 4., 4., 4., 3., 5., 4., 4.,\n",
+       "       5., 4., 5., 4., 5., 4., 4., 4., 5., 4., 4., 4., 5., 5., 5., 4., 5.,\n",
+       "       4., 3., 4., 5., 4., 4., 4., 4., 4., 4., 5., 4., 4., 5., 4., 4., 3.,\n",
+       "       4., 4., 4., 4., 5., 5., 4., 4., 4., 4., 4., 4., 5., 4., 4., 4., 4.,\n",
+       "       4., 4., 3., 5., 3., 3., 4., 5., 3., 3., 3., 4., 4., 4., 4., 3., 4.,\n",
+       "       4., 4., 4., 3., 5., 4., 4., 5., 5., 3., 3., 3., 4., 3., 4., 3., 4.,\n",
+       "       5., 3., 5., 4., 3., 3., 3., 5., 4., 5., 4., 4., 3., 3., 4., 4., 4.,\n",
+       "       4., 3., 3., 3., 5., 4., 4., 3., 3., 4., 3., 3., 4., 4., 5., 4., 4.,\n",
+       "       4., 4., 5., 3., 4., 3., 3., 4., 4., 4., 3., 4., 3., 4., 3., 3., 4.,\n",
+       "       3., 3., 4., 5., 4., 3., 4., 3., 4., 5., 4., 4., 5., 4., 4., 3., 4.,\n",
+       "       3., 4., 3., 4., 4., 4., 3., 4., 4., 4., 3., 4., 4., 4., 5., 4., 4.,\n",
+       "       3., 4., 4., 5., 4., 4., 5., 4., 5., 4., 4., 4., 4., 4., 5., 3., 4.,\n",
+       "       4., 5., 4., 4., 3., 3., 4., 3., 4., 4., 3., 4., 5., 3., 4., 5., 5.,\n",
+       "       4., 5., 5., 5., 5., 5., 5., 4., 5., 5., 5., 5., 5., 5., 5., 5., 5.,\n",
+       "       5., 5., 5., 5., 5., 5., 4., 5., 5., 5., 5., 5., 5., 5., 5., 5., 4.,\n",
+       "       5., 5., 5., 5., 5., 5., 4., 4., 5., 4., 3., 4., 4., 4., 5., 4., 5.,\n",
+       "       5., 4., 5., 4., 4., 4., 3., 4., 4., 5., 4., 5., 3., 3., 4., 3., 4.,\n",
+       "       3., 4., 3., 4., 5., 4., 3., 4., 5., 5., 4., 4., 5., 5., 4., 4., 4.,\n",
+       "       3., 4., 3., 4., 4., 4., 4., 4., 4., 4., 4., 4., 4., 3., 4., 4., 4.,\n",
+       "       5., 4., 4., 4., 4., 4., 4., 4., 4., 4., 3., 4., 4., 4., 5., 4., 4.,\n",
+       "       4., 5., 3., 4., 4., 4., 5., 5., 5., 3., 5., 3., 4., 4., 4., 3., 4.,\n",
+       "       4., 3., 5., 4., 4., 4., 4., 4., 3., 4., 4., 4., 3., 3., 3., 4., 3.,\n",
+       "       4., 3., 3., 4., 2., 3., 3., 3., 4., 3., 3., 4., 4., 3., 5., 5., 5.,\n",
+       "       5., 5., 4., 5., 4., 3., 5., 5., 4., 4., 5., 5., 3., 4., 5., 4., 5.,\n",
+       "       4., 5., 4., 4., 4., 4., 4., 4., 3., 4., 5., 4., 4., 5., 4., 4., 4.,\n",
+       "       5., 4., 5., 4., 4., 5., 4., 3., 4., 4., 5., 4., 4., 4., 4.])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo[\"Target_Label\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "126001a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subid</th>\n",
+       "      <th>SubjectID</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>L2_spelling_skill</th>\n",
+       "      <th>L2_vocabulary_size</th>\n",
+       "      <th>vocab.t2.5</th>\n",
+       "      <th>L2_lexical_skill</th>\n",
+       "      <th>TOWRE_word</th>\n",
+       "      <th>TOWRE_nonword</th>\n",
+       "      <th>motiv</th>\n",
+       "      <th>IQ</th>\n",
+       "      <th>Target_Ave</th>\n",
+       "      <th>Target_Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DU_04</td>\n",
+       "      <td>du_4</td>\n",
+       "      <td>du</td>\n",
+       "      <td>3.522727</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>4.625</td>\n",
+       "      <td>3.7500</td>\n",
+       "      <td>4.038462</td>\n",
+       "      <td>4.444444</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.946772</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DU_05</td>\n",
+       "      <td>du_5</td>\n",
+       "      <td>du</td>\n",
+       "      <td>3.977273</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>4.500</td>\n",
+       "      <td>4.6875</td>\n",
+       "      <td>3.028846</td>\n",
+       "      <td>4.285714</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.063222</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DU_06</td>\n",
+       "      <td>du_6</td>\n",
+       "      <td>du</td>\n",
+       "      <td>4.545455</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.875</td>\n",
+       "      <td>4.7500</td>\n",
+       "      <td>4.038462</td>\n",
+       "      <td>4.285714</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.415772</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DU_07</td>\n",
+       "      <td>du_7</td>\n",
+       "      <td>du</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>4.500</td>\n",
+       "      <td>3.3125</td>\n",
+       "      <td>3.125000</td>\n",
+       "      <td>3.571429</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.459821</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DU_08</td>\n",
+       "      <td>du_8</td>\n",
+       "      <td>du</td>\n",
+       "      <td>3.636364</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>4.625</td>\n",
+       "      <td>3.6875</td>\n",
+       "      <td>3.942308</td>\n",
+       "      <td>2.222222</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.435566</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>rum_67</td>\n",
+       "      <td>rum_67</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>4.545455</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>4.750</td>\n",
+       "      <td>4.6875</td>\n",
+       "      <td>4.230769</td>\n",
+       "      <td>4.126984</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.298451</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>rum_68</td>\n",
+       "      <td>rum_68</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.625</td>\n",
+       "      <td>3.8325</td>\n",
+       "      <td>3.894231</td>\n",
+       "      <td>3.650794</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.947390</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>rum_69</td>\n",
+       "      <td>rum_69</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>4.204545</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>4.625</td>\n",
+       "      <td>3.4375</td>\n",
+       "      <td>4.038462</td>\n",
+       "      <td>4.047619</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.942188</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>rum_70</td>\n",
+       "      <td>rum_70</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>4.431818</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>4.375</td>\n",
+       "      <td>3.6875</td>\n",
+       "      <td>3.557692</td>\n",
+       "      <td>3.253968</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.550996</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>rum_71</td>\n",
+       "      <td>rum_71</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>4.090909</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>4.375</td>\n",
+       "      <td>3.6250</td>\n",
+       "      <td>3.653846</td>\n",
+       "      <td>4.047619</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.640396</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>559 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      subid SubjectID lang  L2_spelling_skill  L2_vocabulary_size  vocab.t2.5  \\\n",
+       "0     DU_04      du_4   du           3.522727                3.30       4.625   \n",
+       "1     DU_05      du_5   du           3.977273                3.90       4.500   \n",
+       "2     DU_06      du_6   du           4.545455                4.00       4.875   \n",
+       "3     DU_07      du_7   du           3.750000                2.50       4.500   \n",
+       "4     DU_08      du_8   du           3.636364                2.50       4.625   \n",
+       "..      ...       ...  ...                ...                 ...         ...   \n",
+       "601  rum_67    rum_67   ru           4.545455                3.45       4.750   \n",
+       "602  rum_68    rum_68   ru           4.431818                3.25       4.625   \n",
+       "603  rum_69    rum_69   ru           4.204545                3.30       4.625   \n",
+       "604  rum_70    rum_70   ru           4.431818                2.00       4.375   \n",
+       "605  rum_71    rum_71   ru           4.090909                2.05       4.375   \n",
+       "\n",
+       "     L2_lexical_skill  TOWRE_word  TOWRE_nonword  motiv    IQ  Target_Ave  \\\n",
+       "0              3.7500    4.038462       4.444444    3.8   6.0    3.946772   \n",
+       "1              4.6875    3.028846       4.285714    4.0   4.0    4.063222   \n",
+       "2              4.7500    4.038462       4.285714    3.8   9.0    4.415772   \n",
+       "3              3.3125    3.125000       3.571429    3.5   9.0    3.459821   \n",
+       "4              3.6875    3.942308       2.222222    3.9   6.0    3.435566   \n",
+       "..                ...         ...            ...    ...   ...         ...   \n",
+       "601            4.6875    4.230769       4.126984    4.0  11.0    4.298451   \n",
+       "602            3.8325    3.894231       3.650794    3.8  11.0    3.947390   \n",
+       "603            3.4375    4.038462       4.047619    3.6   9.0    3.942188   \n",
+       "604            3.6875    3.557692       3.253968    3.5   8.0    3.550996   \n",
+       "605            3.6250    3.653846       4.047619    3.1   7.0    3.640396   \n",
+       "\n",
+       "     Target_Label  \n",
+       "0             4.0  \n",
+       "1             5.0  \n",
+       "2             5.0  \n",
+       "3             4.0  \n",
+       "4             4.0  \n",
+       "..            ...  \n",
+       "601           5.0  \n",
+       "602           4.0  \n",
+       "603           4.0  \n",
+       "604           4.0  \n",
+       "605           4.0  \n",
+       "\n",
+       "[559 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "demo"
    ]
   },
   {
