--- a/Notebooks/a01_data_load_clean_rescale_concat.ipynb
+++ b/Notebooks/a01_data_load_clean_rescale_concat.ipynb
@@ -1090,9 +1090,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a03fbcd9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1675,8 +1679,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "0b8218d5",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1698,13 +1700,14 @@
     "\n",
     "age_gender_ru.shape, ru_age_gender.shape, demo_ru.shape, ru_demo.shape, ru_data.shape, ru_fix_data.shape\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eeeaa81c",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1732,13 +1735,14 @@
     "ru_fix_data.isnull().sum()\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f1f1e2e0",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1771,13 +1775,14 @@
     "ru_demo.isnull().sum()\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "14a91b66",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1799,13 +1804,14 @@
     "\n",
     "ru_age_gender.isnull().sum()\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6b25e412",
-   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -1821,13 +1827,14 @@
     ")\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "25cbf574",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2109,7 +2116,10 @@
    ],
    "source": [
     "demo_ru_concat"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -2120,7 +2130,7 @@
    "source": [
     "\n",
     "\n",
-    "ru_fix_demo = concat_dfs(\n",
+    "ru_fix_demo = concat_dfs  (\n",
     "    df1=ru_fix_data, df2=demo_ru_concat, \n",
     "    features1=[        \n",
     "        'Text_ID', 'Fix_X', 'Fix_Y', 'Fix_Duration', \n",
@@ -2149,18 +2159,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96c41d2e",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac998f63",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
