added run method for basic classifiers

--- a/Notebooks/a04_cnn_model.ipynb
+++ b/Notebooks/a04_cnn_model.ipynb
@@ -19,7 +19,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "df = concat_MECO_langs(langs=['ru'], path_to_data='../Datasets/DataToUse/')\n",
+    "df = concat_MECO_langs('ru', path_to_data='../Datasets/DataToUse/')\n",
     "dataset = MECODataSplit(df)\n",
     "X, y = dataset.split_by_unique_values(split_cols=['SubjectID'],\n",
     "                                      include_cols='fix',\n",
