refactored basic classifier methods

--- a/Notebooks/a04_cnn_model.ipynb
+++ b/Notebooks/a04_cnn_model.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from MECO_data_split import MECODataSplit, concat_MECO_langs\n",
+    "from Preprocessing.MECO_data_split import MECODataSplit, concat_MECO_langs\n",
     "\n",
     "import tensorflow as tf\n",
     "tf.config.set_visible_devices([], 'GPU')"
@@ -50,31 +50,6 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array(['Samuel Morse, best k', 'While he was always',\n       'In 1825, Morse was i', 'Morse rushed to his',\n       'The message had take', 'Grief-stricken, he g',\n       'Leonardo da Vinci is', 'Even though most of',\n       'The parachute, the m', 'Over five hundred ye',\n       'The Amazon Rainfores', 'Areas of the rainfor',\n       'However, it is slowl', 'First, a significant',\n       'There are several co', 'Secondly, the rainfo',\n       'Without rainforests,', 'Howard Gardner was a',\n       'Basically, the theor', 'This is because peop',\n       'He argued that there', 'One type of intellig',\n       'People who possess t', 'Intrapersonal intell',\n       'They enjoy thinking', 'People who have ling',\n       'These people usually', 'The other types of i',\n       'The Internet has mad', 'There are several pr',\n       'Hackers can steal pe', 'One of the most obvi',\n       'Passwords are also a', 'First, they should b',\n       'Your first or last n', 'Longer passwords are',\n       'Finally, passwords s', 'This can make rememb',\n       'Many people fail to', 'It is usually sugges',\n       'Sleep has several be', 'First, it is believe',\n       'This is one reason w', 'On a related note, s',\n       'Those who get suffic', 'The reason for this',\n       \"A bird's feathers ar\", 'Birds in the wild pr',\n       'This is true of most', 'For example, some bi',\n       'This problem is most', 'Presumably, the abse',\n       'A more common proble', 'Some birds may pull',\n       'It should be noted t', 'There are several su',\n       'However, these measu', 'Hibernation in anima',\n       'However, it is quite', 'Usually, it is becau',\n       'Animals that are her', 'Hibernation is essen',\n       'Animals like birds r', 'Obviously, these wil',\n       'Many birds address t', 'At one time, the use',\n       'If a person suffered', 'They have also been',\n       'Today, leeches are s', 'Most often, leeches',\n       'This results in litt', 'When online file-sha',\n       'Perhaps the first wi', 'It allowed users to',\n       'Then, they could dow', 'Obviously, this was',\n       'Eventually, Napster', 'While it later reinv',\n       'Even though several', 'The pencil is a mode',\n       'Around 1560, an Ital', 'Their creation was f',\n       'Their plan involved', 'Shortly after, a bet',\n       'Although many people', 'Technology is rapidl',\n       'Professionals now ha', 'Businesspeople that',\n       'Individuals who simp', 'This fusion of capab',\n       'Finally, people who', 'Morse rushed to his ',\n       'While he was always ', 'Even though most of ',\n       'They enjoy thinking ', 'The reason for this ',\n       'Finally, people who ', 'Many people fail to ',\n       'Some birds may pull ', 'They have also been ',\n       'It allowed users to ', 'Obviously, this was ',\n       'Eventually, Napster ', 'Even though several ',\n       'Their plan involved ', 'Businesspeople that ', '1',\n       'Most often, leeches '], dtype=object)"
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# X, y = dataset.split_by_unique_values(split_cols=['Sentence'], include_cols='fix', test_size=0, fix_threshold=0,\n",
-    "#                                       resample='truncate', series_length=10)\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "pd.unique(dataset.data['Sentence'])"
    ],
    "metadata": {
     "collapsed": false
